<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="Splash_Screen">Splash_Screen</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>

    <!-- Message codes -->
    <string name="Up_Message">w</string>
    <string name="Down_Message">s</string>
    <string name="Lock_Message">a</string>
    <string name="Unlock_Message">d</string>
    <string name="Clear_Message">0</string>


    <!-- Button Labels -->
    <string name="Up_button">Up</string>
    <string name="Down_button">Down</string>
    <string name="Lock_button">Lock</string>
    <string name="Unlock_button">Unlock</string>

    <string name="height_print_on">Print On</string>
    <string name="height_print_off">Print Off</string>

    <string name="height_on">Height</string>
    <string name="height_off">Track Off</string>


    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving the App.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
